# blockchain-in-rust

./: .gitignore  Cargo.toml  README_NETWORK_P2P.md
configs/: README.md  local_node1.toml  local_node2.toml  mdns_node.toml  node.toml
examples/: sync_test.rs  two_nodes_test.rs
src/: lib.rs  main.rs
src/consensus/: mod.rs  poa.rs  validator.rs
src/core/: block.rs  chain.rs  genesis.rs  mod.rs  transaction.rs
src/crypto/: keypair.rs  mod.rs  signature.rs
src/network/: mod.rs  sync.rs
src/network/protocols/: block_announce.rs  block_sync.rs  mod.rs
src/p2p/: behaviour.rs  config.rs  mod.rs  peer_manager.rs  swarm.rs
tests/: test_block.rs  test_chain.rs  test_genesis.rs  test_keypair.rs  test_poa.rs  test_signature.rs  test_transaction.rs  test_validator.rs
