[package]
name = "rustchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
libp2p = { version = "0.53", features = ["tcp", "tokio", "noise", "yamux", "gossipsub", "request-response", "mdns", "identify", "ping", "macros"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
async-trait = "0.1"
futures = "0.3"

[profile.release]
opt-level = 3          # Tối ưu hóa tối đa
lto = false            # Link-time optimization (bật = true nếu muốn build chậm hơn nhưng nhỏ hơn)
codegen-units = 1      # Tối ưu hóa tốt hơn
# strip = true         # Xóa debug symbols (uncomment nếu muốn giảm kích thước)

[dev-dependencies]
